<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyFragment4.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite"
        android:elevation="3dp"
        android:paddingTop="25dp"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="古茗故事"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/hua"
        android:drawableRight="@drawable/hua"
        android:drawablePadding="3dp"
        android:text="品牌介绍"
        android:textColor="#302E45"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/introduction"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/hua"
        android:drawableRight="@drawable/hua"
        android:drawablePadding="3dp"
        android:text="关于产品"
        android:textColor="#302E45"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/about"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/hua"
        android:drawableRight="@drawable/hua"
        android:drawablePadding="3dp"
        android:text="品牌介绍"
        android:textColor="#302E45"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/jiameng"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

</LinearLayout>